<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.PopularLunchComboMeals">
    <android.support.constraint.ConstraintLayout
        android:id="@+id/popular_com_lay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:padding="5dp">
        <TextView
            android:id="@+id/popular_lunch_veg_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/popular_lunch_combo_veg"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/popular_lunch_veg_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/popular_lunch_veg_tv">
        </android.support.v7.widget.RecyclerView>

       <TextView
           android:id="@+id/popular_lunch_non_veg_tv"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/popular_lunch_combo_non_veg"
           android:textSize="17sp"
           android:textStyle="bold"
           android:textColor="@android:color/black"
           android:layout_marginTop="7dp"
           app:layout_constraintTop_toBottomOf="@id/popular_lunch_veg_rv"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/popular_lunch_non_veg_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/popular_lunch_non_veg_tv">
        </android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/popular_dinner_veg_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/popular_dinner_combo_veg"
            app:layout_constraintTop_toBottomOf="@id/popular_lunch_non_veg_rv"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/popular_dinner_veg_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/popular_dinner_veg_tv">
        </android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/popular_dinner_non_veg_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popular_lunch_combo_non_veg"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginTop="7dp"
            app:layout_constraintTop_toBottomOf="@id/popular_dinner_veg_rv"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/popular_dinner_non_veg_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/popular_dinner_non_veg_tv">
        </android.support.v7.widget.RecyclerView>

    </android.support.constraint.ConstraintLayout>


</android.support.v4.widget.NestedScrollView>